# prelude-parser

./: .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  justfile  prek.toml  pyproject.toml  requirements-dev.txt
.github/: release-draft-template.yml
.github/workflows/: prek_update.yml  pypi_publish.yml  release-drafter.yml  testing.yml
prelude_parser/: .null-ls_471691___init__.py  __init__.py  _prelude_parser.pyi  helper.py  pandas.py  parser.py  polars.py  types.py
src/: lib.rs
tests/: conftest.py  test_parser.py
