[package]
name = "prelude-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_prelude_parser"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.2", features = ["extension-module", "abi3-py38"] }
roxmltree = "0.18.0"
