[package]
name = "prelude-parser"
version = "0.4.0"
description = "Parses XML files exported from Prelude EDC into formats usable by Python."
edition = "2021"
license = "MIT"
homepage = "https://github.com/pbs-data-solutions/prelude-parser"
repository = "https://github.com/pbs-data-solutions/prelude-parser"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_prelude_parser"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.82"
chrono = "0.4.38"
pyo3 = { version = "0.21.1", features = ["extension-module", "abi3-py38"] }
roxmltree = "0.19.0"
serde = { version = "1.0.198", features = ["derive"] }
serde-xml-rs = "0.6.0"
thiserror = "1.0.58"
