[package]
name = "prelude-parser"
version = "0.13.0"
description = "Parses XML files exported from Prelude EDC into formats usable by Python."
edition = "2021"
license = "MIT"
homepage = "https://github.com/pbs-data-solutions/prelude-parser"
repository = "https://github.com/pbs-data-solutions/prelude-parser"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_prelude_parser"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.96"
chrono = "0.4.39"
prelude-xml-parser = { version = "0.8.0", features = ["python"] }
pyo3 = { version = "0.23.4", features = ["extension-module"] }
roxmltree = "0.20.0"
serde = { version = "1.0.217", features = ["derive"] }
serde-xml-rs = "0.6.0"
thiserror = "2.0.11"
